--- a/BEN-WTR-APP.ioc
+++ b/BEN-WTR-APP.ioc
@@ -6,7 +6,9 @@ Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
 Dma.Request2=SPI2_RX
 Dma.Request3=SPI2_TX
-Dma.RequestsNb=4
+Dma.Request4=USART2_RX
+Dma.Request5=USART2_TX
+Dma.RequestsNb=6
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.Instance=DMA1_Channel2
 Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -43,6 +45,24 @@ Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.4.Instance=DMA1_Channel6
+Dma.USART2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.4.Mode=DMA_CIRCULAR
+Dma.USART2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART2_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.5.Instance=DMA1_Channel7
+Dma.USART2_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.5.Mode=DMA_NORMAL
+Dma.USART2_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -55,7 +75,7 @@ Mcu.IP3=SPI1
 Mcu.IP4=SPI2
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IP7=USART1
+Mcu.IP7=USART2
 Mcu.IP8=USB
 Mcu.IP9=USB_DEVICE
 Mcu.IPNb=10
@@ -63,27 +83,27 @@ Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
 Mcu.Pin18=PB8
 Mcu.Pin19=PB9
 Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PB12
-Mcu.Pin4=PB13
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA10
 Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -94,6 +114,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -103,7 +124,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.GPIOParameters=GPIO_Label
@@ -123,6 +143,14 @@ PA15.GPIO_Label=GPIO.FLASH.NCS
 PA15.Locked=true
 PA15.PinState=GPIO_PIN_SET
 PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=USART2.TX.ESP
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=USART2.RX.ESP
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PB12.GPIOParameters=PinState,GPIO_Label
 PB12.GPIO_Label=GPIO.BME280.NCS
 PB12.Locked=true
@@ -155,16 +183,6 @@ PB5.GPIO_Label=SPI1.MOSI.FLASH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=USART1.TX.ESP
-PB6.Locked=true
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=USART1.RX.ESP
-PB7.Locked=true
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=GPIO.ESP.NPD_EN
 PB8.Locked=true
@@ -214,7 +232,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_SPI1_Init-SPI1-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_TIM1_Init-TIM1-false-LL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_SPI1_Init-SPI1-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_TIM1_Init-TIM1-false-LL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,8-MX_USART2_UART_Init-USART2-false-LL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
@@ -273,9 +291,9 @@ TIM1.OCMode_PWM-PWM\ Generation1\ CH1N=TIM_OCMODE_PWM2
 TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
 TIM1.Period=99
 TIM1.Prescaler=359
-USART1.BaudRate=115200
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.BaudRate=115200
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS
 USB_DEVICE.PRODUCT_STRING_CDC_FS=BEN-WTR-APP
